--- a/linphone-desktop/assets/assistant/create-linphone-sip-account.rc
+++ b/linphone-desktop/assets/assistant/create-linphone-sip-account.rc
@@ -18,6 +18,9 @@
     <entry name="stun_server" overwrite="true">stun.linphone.org</entry>
     <entry name="protocols" overwrite="true">stun,ice</entry>
 </section>
+  <section name="misc">
+    <entry name="file_transfer_server_url" overwrite="true">https://www.linphone.org:444/lft.php</entry>
+  </section>
   <section name="sip">
     <entry name="rls_uri" overwrite="true">sips:rls@sip.linphone.org</entry>
   </section>
@@ -29,5 +32,6 @@
     <entry name="username_max_length" overwrite="true">64</entry>
     <entry name="username_min_length" overwrite="true">1</entry>
     <entry name="username_regex" overwrite="true">^[a-z0-9+_.\-]*$</entry>
+    <entry name="xmlrpc_url" overwrite="true">https://subscribe.linphone.org:444/wizard.php</entry>
   </section>
 </config>
