--- a/linphone-desktop/assets/assistant/use-linphone-sip-account.rc
+++ b/linphone-desktop/assets/assistant/use-linphone-sip-account.rc
@@ -19,6 +19,9 @@
     <entry name="stun_server" overwrite="true">stun.linphone.org</entry>
     <entry name="protocols" overwrite="true">stun,ice</entry>
   </section>
+  <section name="misc">
+    <entry name="file_transfer_server_url" overwrite="true">https://www.linphone.org:444/lft.php</entry>
+  </section>
  <section name="sip">
     <entry name="rls_uri" overwrite="true">sips:rls@sip.linphone.org</entry>
   </section>
