Fix packaging if version number has only 2 digits.

--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -40,9 +40,12 @@ else()
 endif()
 string(REGEX REPLACE "([0-9.]+)-?.*" "\\1" LINPHONE_VERSION "${LINPHONE_GIT_REVISION}")
 string(REPLACE "." ";" SPLITTED_LINPHONE_VERSION ${LINPHONE_VERSION})
+list(LENGTH SPLITTED_LINPHONE_VERSION SPLITTED_LINPHONE_VERSION_LENGTH)
 list(GET SPLITTED_LINPHONE_VERSION 0 LINPHONE_MAJOR_VERSION)
 list(GET SPLITTED_LINPHONE_VERSION 1 LINPHONE_MINOR_VERSION)
-list(GET SPLITTED_LINPHONE_VERSION 2 LINPHONE_MICRO_VERSION)
+if(SPLITTED_LINPHONE_VERSION_LENGTH GREATER 2)
+	list(GET SPLITTED_LINPHONE_VERSION 2 LINPHONE_MICRO_VERSION)
+endif()
 set(PACKAGE_VERSION "${LINPHONE_VERSION}")
 
 # Preparing the Linphone SDK bundle
@@ -294,7 +297,9 @@ set(CPACK_PACKAGE_NAME "Linphone")
 set(CPACK_PACKAGE_VENDOR "Belledonne communications")
 set(CPACK_PACKAGE_VERSION_MAJOR ${LINPHONE_MAJOR_VERSION})
 set(CPACK_PACKAGE_VERSION_MINOR ${LINPHONE_MINOR_VERSION})
-set(CPACK_PACKAGE_VERSION_PATCH ${LINPHONE_MICRO_VERSION})
+if(LINPHONE_MICRO_VERSION)
+	set(CPACK_PACKAGE_VERSION_PATCH ${LINPHONE_MICRO_VERSION})
+endif()
 set(CPACK_PACKAGE_EXECUTABLES "linphone;Linphone")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "Linphone")
 set(CPACK_RESOURCE_FILE_LICENSE "${LINPHONE_SOURCE_DIR}/COPYING")
@@ -321,7 +326,11 @@ if(WIN32)
 	set(CPACK_NSIS_MUI_ICON "${LINPHONE_DESKTOP_DIR}/linphone.ico")
 	set(CPACK_NSIS_MUI_UNIICON "${LINPHONE_DESKTOP_DIR}/linphone.ico")
 	set(CPACK_NSIS_DISPLAY_NAME "Linphone")
-	set(CPACK_NSIS_PACKAGE_NAME "Linphone ${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}.${LINPHONE_MICRO_VERSION}")
+	if(LINPHONE_MICRO_VERSION)
+		set(CPACK_NSIS_PACKAGE_NAME "Linphone ${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}.${LINPHONE_MICRO_VERSION}")
+	else()
+		set(CPACK_NSIS_PACKAGE_NAME "Linphone ${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}")
+	endif()
 	set(CPACK_NSIS_URL_INFO_ABOUT "http://www.linphone.org/")
 
 	file(TO_NATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}" DOS_STYLE_SOURCE_DIR)
