Add desktop file to comply with freedesktop standard.

--- a/linphone-desktop/CMakeLists.txt
+++ b/linphone-desktop/CMakeLists.txt
@@ -336,6 +336,10 @@ install(TARGETS ${TARGET_NAME}
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
 
+install(FILES "linphone.desktop"
+  DESTINATION "${CMAKE_INSTALL_DATADIR}/applications"
+)
+
 # ------------------------------------------------------------------------------
 # Install rc files.
 # ------------------------------------------------------------------------------
