Fix path where the icon is installed.

--- a/linphone-desktop/CMakeLists.txt
+++ b/linphone-desktop/CMakeLists.txt
@@ -340,7 +340,7 @@ install(FILES "linphone.desktop"
   DESTINATION "${CMAKE_INSTALL_DATADIR}/applications"
 )
 install(FILES "${ASSETS_DIR}/images/linphone_logo.svg"
-  DESTINATION "${CMAKE_INSTALL_DATADIR}/icons"
+  DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/scalable/apps/"
   RENAME "linphone.svg"
 )
 
