--- a/linphone-desktop/linphone.desktop
+++ b/linphone-desktop/linphone.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Linphone
-GenericName=Web-phone
-Comment=Linphone is a web-phone
+GenericName=SIP Phone
+Comment=Linphone is a libre SIP client
 Type=Application
 Exec=linphone %u
 Icon=linphone
