--- a/assets/linphone.desktop
+++ b/assets/linphone.desktop
@@ -7,6 +7,7 @@ Exec=linphone %u
 Icon=linphone
 Terminal=false
 Categories=Network;Telephony;
+MimeType=x-scheme-handler/sip-linphone;x-scheme-handler/sip;
 
 
 # Translations
