--- a/cmake_builder/linphone_package/Info.plist.in
+++ b/cmake_builder/linphone_package/Info.plist.in
@@ -1,37 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleDevelopmentRegion</key>
-    <string>English</string>
-    <key>CFBundleName</key>
-    <string>Linphone</string>
-    <key>CFBundleDisplayName</key>
-    <string>Linphone</string>
-    <key>CFBundleExecutable</key>
-    <string>linphone</string>
-    <key>CFBundleGetInfoString</key>
-    <string>@PACKAGE_VERSION@, (C) 2011-2017 The linphone team http://www.linphone.org</string>
-    <key>CFBundleIconFile</key>
-    <string>linphone.icns</string>
-    <key>CFBundleIdentifier</key>
-    <string>org.linphone.linphone</string>
-    <key>CFBundleInfoDictionaryVersion</key>
-    <string>6.0</string>
-    <key>CFBundlePackageType</key>
-    <string>APPL</string>
-    <key>CFBundleShortVersionString</key>
-    <string>@PACKAGE_VERSION@</string>
-    <key>CFBundleSignature</key>
-    <string>????</string>
-    <key>CFBundleVersion</key>
-    <string>@PACKAGE_VERSION@</string>
-    <key>NSHumanReadableCopyright</key>
-    <string>Copyright 2011-2017 Belledonne Communications</string>
-    <key>LSMinimumSystemVersion</key>
-    <string>@CMAKE_OSX_DEPLOYMENT_TARGET@</string>
-    <key>NSAppSleepDisabled</key>
-    <string>YES</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>English</string>
+	<key>CFBundleName</key>
+	<string>Linphone</string>
+	<key>CFBundleDisplayName</key>
+	<string>Linphone</string>
+	<key>CFBundleExecutable</key>
+	<string>linphone</string>
+	<key>CFBundleGetInfoString</key>
+	<string>@PACKAGE_VERSION@, (C) 2011-2017 The linphone team http://www.linphone.org</string>
+	<key>CFBundleIconFile</key>
+	<string>linphone.icns</string>
+	<key>CFBundleIdentifier</key>
+	<string>org.linphone.linphone</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>@PACKAGE_VERSION@</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>@PACKAGE_VERSION@</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright 2011-2017 Belledonne Communications</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>@CMAKE_OSX_DEPLOYMENT_TARGET@</string>
+	<key>NSAppSleepDisabled</key>
+	<string>YES</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.belldonnecommunications.linphone</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>sip</string>
+				<string>sip-linphone</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
-
