chore(CMakeLists.txt): remove `CR` in translation files on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,7 +227,8 @@ foreach (line ${QRC_RESOURCES_CONTENT})
     "^[ \t]*<[ \t]*file[ \t]*>[ \t]*(.+\\.[a-z]+)[ \t]*<[ \t]*/[ \t]*file[ \t]*>[ \t]*$"
     "\\1"
     result
-    ${line})
+    "${line}"
+  )
   string(REGEX MATCH "\\.[a-z]+$" isUi ${result})
   if (NOT ${isUi} STREQUAL "")
     list(APPEND QML_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${result}")
