Fix a potential CMake error during packaging.

--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -39,7 +39,7 @@ else()
 	set(LINPHONE_GIT_REVISION "0.0.0")
 endif()
 string(REGEX REPLACE "([0-9.]+)-?.*" "\\1" LINPHONE_VERSION "${LINPHONE_GIT_REVISION}")
-string(REPLACE "." ";" SPLITTED_LINPHONE_VERSION ${LINPHONE_VERSION})
+string(REPLACE "." ";" SPLITTED_LINPHONE_VERSION "${LINPHONE_VERSION}")
 list(LENGTH SPLITTED_LINPHONE_VERSION SPLITTED_LINPHONE_VERSION_LENGTH)
 list(GET SPLITTED_LINPHONE_VERSION 0 LINPHONE_MAJOR_VERSION)
 list(GET SPLITTED_LINPHONE_VERSION 1 LINPHONE_MINOR_VERSION)
