feat(App): supports test, `self-test` is now a test and not a program option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,7 +213,8 @@ set(HEADERS
 )
 
 set(TESTS
-  src/tests/SelfTest.cpp
+  src/tests/self-test/SelfTest.cpp
+  src/tests/self-test/SelfTest.hpp
 )
 
 set(MAIN_FILE src/app/main.cpp)
