Handle source package generation for linphoneqt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -392,3 +392,21 @@ install(FILES "${ASSETS_ASSISTANT_DIR}/create-linphone-sip-account.rc"
 install(FILES "${ASSETS_ASSISTANT_DIR}/use-linphone-sip-account.rc"
   DESTINATION "${ASSISTANT_INSTALL_DATADIR}"
 )
+
+
+# ------------------------------------------------------------------------------
+# CPack settings.
+# ------------------------------------------------------------------------------
+
+set(CPACK_SOURCE_GENERATOR "TGZ")
+set(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}")
+set(CPACK_SOURCE_IGNORE_FILES
+	"^${CMAKE_BINARY_DIR}"
+	"/\\\\..+"
+	"OUTPUT"
+	"WORK"
+	"cmake_builder"
+	"submodules"
+)
+
+include(CPack)
