chore(cmake_builder): update `Info.plist.in`

--- a/cmake_builder/linphone_package/Info.plist.in
+++ b/cmake_builder/linphone_package/Info.plist.in
@@ -44,5 +44,9 @@
 			</array>
 		</dict>
 	</array>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
+	<key>NSHighResolutionCapable</key>
+	<string>True</string>
 </dict>
 </plist>
