--- a/cmake_builder/linphone_package/Info.plist.in
+++ b/cmake_builder/linphone_package/Info.plist.in
@@ -36,7 +36,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.belldonnecommunications.linphone</string>
+			<string>com.belledonnecommunications.linphone</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>sip</string>
