--- a/assets/assistant/create-linphone-sip-account.rc
+++ b/assets/assistant/create-linphone-sip-account.rc
@@ -13,6 +13,7 @@
     <entry name="reg_sendregister" overwrite="true">1</entry>
     <entry name="nat_policy_ref" overwrite="true">nat_policy_default_values</entry>
     <entry name="realm" overwrite="true">sip.linphone.org</entry>
+    <entry name="contact_parameters" overwrite="true">message-expires=604800</entry>
   </section>
 <section name="nat_policy_default_values">
     <entry name="stun_server" overwrite="true">stun.linphone.org</entry>
