--- a/cmake_builder/linphone_package/MacPackaging.cmake.in
+++ b/cmake_builder/linphone_package/MacPackaging.cmake.in
@@ -1,6 +1,6 @@
 ############################################################################
 # MacPackaging.cmake
-# Copyright (C) 2017  Belledonne Communications, Grenoble France
+# Copyright (C) 2017-2018  Belledonne Communications, Grenoble France
 #
 ############################################################################
 #
