--- a/.gitmodules
+++ b/.gitmodules
@@ -110,3 +110,9 @@
 [submodule "submodules/externals/soci"]
 	path = submodules/externals/soci
 	url = git://git.linphone.org/soci
+[submodule "submodules/lime"]
+	path = submodules/lime
+	url = gitosis@git.linphone.org:lime
+[submodule "submodules/externals/decaf"]
+	path = submodules/externals/decaf
+	url = git://git.linphone.org/decaf.git
