--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -260,7 +260,7 @@ set(QRC_RESOURCES resources.qrc)
 
 set(LANGUAGES_DIRECTORY "${ASSETS_DIR}/languages")
 set(I18N_FILENAME i18n.qrc)
-set(LANGUAGES en fr)
+set(LANGUAGES en fr_FR)
 
 # ------------------------------------------------------------------------------
 
