chore(build): provide a way to build a qt rpm

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ GTAGS
 *.qmlc
 *.jsc
 
+# RPM --------------------------------------------------------------------------
+
+qt-*.tar.gz
+qt5/
+rpm-qt-*/
+
 # OTHER ------------------------------------------------------------------------
 
 vgcore.*
