chore(tools): remove build_qt_tarball

--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,8 @@ GTAGS
 
 # RPM --------------------------------------------------------------------------
 
-qt-*.tar.gz
-qt5/
-rpm-qt-*/
+linphone-qt/
+rpm-*/
 
 # OTHER ------------------------------------------------------------------------
 
