Use sqlite3 submodule instead of duplicating code in this repository.
Origin: e8bb26332d9cab89fc8899a0f8ea4d73db89ed9d

--- a/.gitmodules
+++ b/.gitmodules
@@ -110,3 +110,6 @@
 [submodule "submodules/externals/minizip"]
 	path = submodules/externals/minizip
 	url = https://gitlab.linphone.org/BC/public/external/minizip.git
+[submodule "submodules/externals/sqlite3"]
+	path = submodules/externals/sqlite3
+	url = https://gitlab.linphone.org/BC/public/external/sqlite3.git
