--- a/.gitmodules
+++ b/.gitmodules
@@ -110,3 +110,6 @@
 [submodule "submodules/externals/soci"]
 	path = submodules/externals/soci
 	url = git://git.linphone.org/soci
+[submodule "submodules/externals/sqlite3"]
+	path = submodules/externals/sqlite3
+	url = git://git.linphone.org/sqlite3.git
